--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ dash-renderer==0.14.3
 dash-html-components==0.13.2
 dash-core-components==0.34.0
 
+
 # Additional
 colorlover==0.2.1
 numpy==1.14.3
 pandas==0.20.3
 scikit-learn==0.19.1
 scipy==1.0.1
+dash_table==3.6.0
